# ultra-market

./: .gitignore  Makefile  README.md  docker-compose.yaml
auth/: Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
auth/alembic/: env.py
auth/api/: auth.py  internal.py
auth/core/: config.py  dependencies.py  security.py
auth/db/: base.py  models.py  session.py
auth/repository/: user_repo.py
auth/schemas/: user.py
auth/service/: auth_service.py
gateway/: nginx.conf
users/: Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
users/api/: users.py
users/db/: models.py  session.py
users/migrations/: env.py
users/migrations/versions/: e7d5150d81ea_init.py
users/repository/: user_repo.py
users/schemas/: user.py
users/services/: user_service.py
